; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_io_manager.c_io_channel_write_blk64.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_io_manager.c_io_channel_write_blk64.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32 (%struct.TYPE_8__*, i64, i32, i8*)*, {}* }

@EXT2_ET_MAGIC_IO_CHANNEL = common dso_local global i32 0, align 4
@EXT2_ET_IO_CHANNEL_NO_SUPPORT_64 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @io_channel_write_blk64(%struct.TYPE_8__* %0, i64 %1, i32 %2, i8* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %6, align 8
  store i64 %1, i64* %7, align 8
  store i32 %2, i32* %8, align 4
  store i8* %3, i8** %9, align 8
  %10 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %11 = load i32, i32* @EXT2_ET_MAGIC_IO_CHANNEL, align 4
  %12 = call i32 @EXT2_CHECK_MAGIC(%struct.TYPE_8__* %10, i32 %11)
  %13 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %14 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 1
  %17 = bitcast {}** %16 to i32 (%struct.TYPE_8__*, i64, i32, i8*)**
  %18 = load i32 (%struct.TYPE_8__*, i64, i32, i8*)*, i32 (%struct.TYPE_8__*, i64, i32, i8*)** %17, align 8
  %19 = icmp ne i32 (%struct.TYPE_8__*, i64, i32, i8*)* %18, null
  br i1 %19, label %20, label %32

20:                                               ; preds = %4
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %21, i32 0, i32 0
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 1
  %25 = bitcast {}** %24 to i32 (%struct.TYPE_8__*, i64, i32, i8*)**
  %26 = load i32 (%struct.TYPE_8__*, i64, i32, i8*)*, i32 (%struct.TYPE_8__*, i64, i32, i8*)** %25, align 8
  %27 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %28 = load i64, i64* %7, align 8
  %29 = load i32, i32* %8, align 4
  %30 = load i8*, i8** %9, align 8
  %31 = call i32 %26(%struct.TYPE_8__* %27, i64 %28, i32 %29, i8* %30)
  store i32 %31, i32* %5, align 4
  br label %49

32:                                               ; preds = %4
  %33 = load i64, i64* %7, align 8
  %34 = lshr i64 %33, 32
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %32
  %37 = load i32, i32* @EXT2_ET_IO_CHANNEL_NO_SUPPORT_64, align 4
  store i32 %37, i32* %5, align 4
  br label %49

38:                                               ; preds = %32
  %39 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %40 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %39, i32 0, i32 0
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %41, i32 0, i32 0
  %43 = load i32 (%struct.TYPE_8__*, i64, i32, i8*)*, i32 (%struct.TYPE_8__*, i64, i32, i8*)** %42, align 8
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %45 = load i64, i64* %7, align 8
  %46 = load i32, i32* %8, align 4
  %47 = load i8*, i8** %9, align 8
  %48 = call i32 %43(%struct.TYPE_8__* %44, i64 %45, i32 %46, i8* %47)
  store i32 %48, i32* %5, align 4
  br label %49

49:                                               ; preds = %38, %36, %20
  %50 = load i32, i32* %5, align 4
  ret i32 %50
}

declare dso_local i32 @EXT2_CHECK_MAGIC(%struct.TYPE_8__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
